tests/fixtures/positive/licensing/dependency-license-incompatible/settings.gradle.kts
rootProject.name = "dependency-license-incompatible-positive"

include(":app")
