tests/fixtures/negative/licensing/dependency-license-incompatible/settings.gradle.kts
rootProject.name = "dependency-license-incompatible-negative"

include(":app")
